Minor edits -- timed results were performed on beepboop

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -10,7 +10,7 @@ Our experimental analysis addresses five questions:
 
 \subsection{Computational environment}
 
-All results that we present were executed on a server with two Intel Xeon E5-2699~v4
+All timed results that we present were executed on a server with two Intel Xeon E5-2699~v4
 (55~MB cache, 2.20~GHz) processors and 448~GB RAM.
 %
 Except where we mention a memory constraint, all experiments
