--- a/paper/sections/implementation-long.tex
+++ b/paper/sections/implementation-long.tex
@@ -197,7 +197,7 @@ even know the relevant identifying information.
 %
 Thus, we have no way to update the queue without iterating over every element.
 %
-We address this by lazily marking nodes in the prefix tree as deleted~(\S\ref{sec:trie}),
+We address this by lazily marking nodes in the prefix tree as deleted (see~\S\ref{sec:trie}),
 without deleting the physical node until it has been removed from the queue.
 %
 We define two different queues that we refer to in our experiments~(\S\ref{sec:experiments}):
