Add incomplete pseudocode for main CORELS loop with bounds

--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -61,6 +61,7 @@
 \def\Minor{\q_{\textnormal{min}}}
 \def\Curiosity{\mathcal{C}}
 \def\NCap{N_{\textnormal{cap}}}
+\def\Continue{\textbf{continue}}
 
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\Ac}{\mathcal{A}^c}
