I think this pseudocode is coherent

--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -62,6 +62,7 @@
 \def\Curiosity{\mathcal{C}}
 \def\NCap{N_{\textnormal{cap}}}
 \def\Continue{\textbf{continue}}
+\def\PMap{P}
 
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\Ac}{\mathcal{A}^c}
