--- a/paper/sections/implementation-long.tex
+++ b/paper/sections/implementation-long.tex
@@ -3,25 +3,29 @@
 \section{Implementation}
 \label{sec:implementation}
 
-We implement our algorithm using a collection of optimized data structures.
+We implement our algorithm using a collection of optimized data structures
+that we describe in this section.
 %
-First, in~\S\ref{sec:trie}, we explain our choice of a prefix tree
-to support incremental computation~(\S\ref{sec:incremental}).
+First, we explain how we use a prefix tree~(\S\ref{sec:trie})
+to support the incremental computations that we motivated in~\S\ref{sec:incremental}.
 %
-Second, in~\S\ref{sec:queue}, we describe several queue designs
-that implement different search policies.
+Second, we describe several queue designs
+that implement different search policies~(\S\ref{sec:queue}).
 %
-Third, in~\S\ref{sec:pmap}, we introduce a symmetry-aware map to support
+Third, we introduce a symmetry-aware map~(\S\ref{sec:pmap}) to support
 symmetry-aware pruning~(Corollary~\ref{thm:permutation},~\S\ref{sec:permutation}).
 %
-Next, in~\S\ref{sec:execution}, we summarize our incremental execution model,
-and summarize CORELS's inner computational loop in Algorithm~\ref{alg:bounds},
-where we highlight each of bounds from~\S\ref{sec:bounds} that we use to prune the search space.
+Next, we summarize how these data structures interact throughout
+our model of incremental execution~(\S\ref{sec:execution}).
 %
-We additionally describe in~\S\ref{sec:gc} how we garbage collect our data structures.
+In particular, Algorithms~\ref{alg:bounds} and~\ref{alg:pmap} illustrate many
+of the computational details from CORELS's inner loop, and highlight each of
+the bounds from~\S\ref{sec:framework} that we use to prune the search space.
 %
-Finally, we explore in~\S\ref{sec:scheduling} how our queue can be used to support
-custom scheduling policies designed to improve performance.
+We additionally describe how we garbage collect our data structures~(\S\ref{sec:gc}).
+%
+Finally, we explore how our queue can be used to support
+custom scheduling policies designed to improve performance~(\S\ref{sec:scheduling}).
 %
 Our implementation of CORELS can be found~at: \\
 
@@ -34,36 +38,42 @@ Our incremental computations (\S\ref{sec:incremental}) require a
 cache to keep track of rule lists we have already evaluated.
 %
 We implement this cache as a prefix tree, a data structure also known as a trie,
-which allows us to efficiently represent structure shared between related rule lists.
+which allows us to efficiently represent structure shared between related prefixes.
 %
 Each node in the prefix tree encodes an individual rule ${r_k = p_k \rightarrow q_k}$.
 %
-Each path starting from the root represents a rule list, such that the final node
-in the path also contains metadata associated with that corresponding rule list.
+Each path starting from the root represents a prefix, such that the final node
+in the path also contains metadata associated with that prefix.
 %
-For a rule list ${\RL = (\Prefix, \Labels, \Default, K)}$,
-with prefix ${\Prefix = (p_1, \dots, p_K)}$,
-let~$\varphi(\RL)$ denote the corresponding node in the trie.
+For a %rule list ${\RL = (\Prefix, \Labels, \Default, K)}$, with
+prefix ${\Prefix = (p_1, \dots, p_K)}$,
+let~$\varphi(\Prefix)$ denote the corresponding node in the trie.
 %
-The metadata at node~$\varphi(\RL)$ supports the incremental computations
-we described in~\S\ref{sec:incremental}, and includes:
+The metadata at node~$\varphi(\Prefix)$ supports the incremental computation
+and includes:
 \begin{itemize}
-\item An index encoding antecedent~$p_K$.
-\item The corresponding label prediction~$q_K$.
-%\item $\RL$'s length~$K$; equivalently, node~$\varphi(\RL)$'s depth in the trie. % <-- not strictly necessary
-\item The default rule label prediction~$\Default$.
-\item $\NCap$, the number of samples captured by prefix $\Prefix$, as in~\eqref{eq:num-cap}. % <-- not strictly necessary
-% \item The objective $\Obj(\RL, \x, \y)$~\eqref{eq:objective}. % <-- not strictly necessary
+\item An index encoding~$p_K$, the last antecedent.
 \item The objective lower bound $b(\Prefix, \x, \y)$, defined in~\eqref{eq:lower-bound},
   the central bound in our framework (Theorem~\ref{thm:bound}).
 \item The lower bound on the default rule misclassification error
   $b_0(\Prefix, \x, \y)$, defined in~\eqref{eq:lb-b0},
   to support our equivalent points bound (Theorem~\ref{thm:identical}).
-\item An indicator denoting whether or not this node should be deleted (see~\S\ref{sec:gc}).
+\item An indicator denoting whether this node should be deleted (see~\S\ref{sec:gc}).
 \item A representation of viable extensions of~$\Prefix$,
-  \ie length ${K+1}$ rule lists that start with~$\Prefix$ and have not been pruned.
+  \ie length ${K+1}$ prefix that start with~$\Prefix$ and have not been pruned.
 \end{itemize}
-We note that we implement the prefix tree as a custom C++ class. % decouple artifact from design
+For evaluation purposes and convenience, we store additional information in
+the prefix tree; for a prefix~$\Prefix$ with corresponding rule list
+${\RL = (\Prefix, \Labels, \Default, K)}$, the node~$\varphi(\Prefix)$ also stores:
+\begin{itemize}
+\item The length~$K$; equivalently, node~$\varphi(\Prefix)$'s depth in the trie. 
+\item The label prediction~$q_K$ corresponding to antecedent~$p_K$.
+\item The default rule label prediction~$\Default$.
+\item $\NCap$, the number of samples captured by prefix $\Prefix$, as in~\eqref{eq:num-cap}.
+\item The objective value $\Obj(\RL, \x, \y)$, defined in~\eqref{eq:objective}.
+\end{itemize}
+%
+Finally, we note that we implement the prefix tree as a custom C++ class. % decouple artifact from design
 %
 % This might be a bit much detail for here
 %In addition to our base trie class, we also implemented a different node type that we use in our algorithm.
@@ -76,26 +86,35 @@ We note that we implement the prefix tree as a custom C++ class. % decouple arti
 \label{sec:queue}
 
 The queue is a worklist that orders exploration over the search space of possible
-rule lists; every queue element corresponds to a prefix tree leaf, and vice versa.
+rule lists; every queue element corresponds to leaf in the prefix tree, and vice versa.
 %
 In our implementation, each queue element points to a leaf;
 when we pop an element off the queue, we use the leaf's metadata to
 incrementally evaluate the corresponding prefix's children.
 
-We order entries in the queue to implement several different policies.
+We order entries in the queue to implement several different search policies.
 %
-A first-in-first-out (FIFO) queue implements breadth-first search (BFS),
-and a priority queue implements best-first search; in our released code,
-we implement all scheduling policies, including BFS, using a STL C++ priority queue.
+For example, a first-in-first-out~(FIFO) queue implements breadth-first search~(BFS),
+and a priority queue implements best-first search.
 %
-Example priority queue policies include ordering
-by the lower bound, the objective, a custom metric that maps prefixes to real values,
-or prefix length, which corresponds to depth-first search (DFS).
+In our experiments~(\S\ref{sec:experiments}), we use the C++ Standard Template Library~(STL)
+queue and priority queue to implement BFS and best-first search, respectively.
+%
+For CORELS, priority queue policies of interest include ordering by the lower bound,
+the objective, or more generally, any function that maps prefixes to real values;
+ordering by prefix length and inverse prefix length implement
+BFS and depth-first search (DFS), respectively.
+%
+In our released code, we present a unified implementation,
+where we use the STL priority queue to support BFS, DFS,
+and several best-first search policies.
 %
 As we demonstrate in our experiments~(\S\ref{sec:ablation}),
-we find that using an custom search strategy,
+we find that using a custom search strategy,
 such as ordering by the lower bound, usually leads to a faster runtime than BFS.
 
+We motivate the design of additional custom search strategies in~\S\ref{sec:curiosity}.
+%
 In preliminary work (not shown), we also experimented with
 stochastic exploration processes that bypass the need for a queue
 by instead following random paths from the root to leaves;
@@ -104,24 +123,21 @@ developing such methods could be an interesting direction for future work.
 \subsection{Symmetry-aware map}
 \label{sec:pmap}
 
-The symmetry-aware map supports symmetry-aware pruning~(\S\ref{sec:permutation}).
+The symmetry-aware map supports the symmetry-aware pruning justified in~\S\ref{sec:equivalent}.
 %
 In our implementation, we specifically leverage our permutation bound
 (Corollary~\ref{thm:permutation}), though it is also possible to directly
 exploit the more general equivalent support bound (Theorem~\ref{thm:equivalent}).
 %
-We implement this symmetry-aware map using the C++ STL unordered\_map,
-to map all permutations of a set of antecedents to a key whose value contains
-the best ordering of those antecedents (\ie the prefix with the smallest lower bound).
+We use the C++ STL unordered map to keep track of the best known ordering
+of each evaluated set of antecedents.
 %
-Every antecedent is associated with an index, and we call the numerically
-sorted order of a set of antecedents its canonical order.
+The keys of our symmetry-aware map encode antecedents in canonical order,
+\ie antecedent indices in numerically sorted order,
+and we associate all permutations of a set of antecedents with a single key.
 %
-Thus by querying a set of antecedents by its canonical order,
-all permutations map to the same key.
-%
-The value stored in the map consists of the lower bound and the actual ordering
-of the rules that is best for that permutation.
+Each key maps to a value that encodes the best known prefix in the permutation
+group of the key's antecedents, as well as the objective lower bound of that prefix.
 
 Before we consider adding a prefix~$\Prefix$ to the trie and queue, we check
 whether the map already contains a permutation~$\pi(\Prefix)$ of that prefix.
@@ -235,7 +251,8 @@ then we do nothing, \ie we do not insert~$\Prefix$ into any data structures.
 \end{algorithmic}
 \end{algorithm}
 
-Mapping our algorithm to our data structures produces the following execution strategy.
+Mapping our algorithm to our data structures produces the following execution strategy,
+which we also illustrate in Algorithms~\ref{alg:bounds} and~\ref{alg:pmap}.
 %
 We initialize the current best objective~$\CurrentObj$ and rule list~$\CurrentRL$.
 %
@@ -243,32 +260,33 @@ While the trie contains unexplored leaves, a scheduling policy selects the next 
 to extend; in our implementation, we pop elements from a (priority) queue, until the queue is empty.
 %
 Then, for every antecedent~$s$ that is not in~$\Prefix$,
-we construct a new prefix~$\Prefix'$ by appending~$s$ to~$\Prefix$;
-we incrementally calculate the lower bound~$b(\Prefix', \x, \y)$,
-the objective~$\Obj(\RL', \x, \y)$, of the associated rule list~$\RL'$,
+we construct a new prefix~$\PrefixB$ by appending~$s$ to~$\Prefix$;
+we incrementally calculate the lower bound~$b(\PrefixB, \x, \y)$,
+the objective~$\Obj(\RLB, \x, \y)$, of the associated rule list~$\RLB$,
 and other quantities used by our algorithm, summarized by the metadata fields of
-the (potential) prefix tree node~$\varphi(\Prefix')$.
+the (potential) prefix tree node~$\varphi(\PrefixB)$.
 
-If the objective~$\Obj(\RL', \x, \y)$ is less than the current best objective~$\CurrentObj$,
-then we update~$\CurrentObj$ and~$\RL$.
+If the objective~$\Obj(\RLB, \x, \y)$ is less than the current best objective~$\CurrentObj$,
+then we update~$\CurrentObj$ and~$\CurrentRL$.
 %
-If the lower bound of the new prefix~$\Prefix'$ is less than the current best objective,
+If the lower bound of the new prefix~$\PrefixB$ is less than the current best objective,
 %\ie ${b(\Prefix', \x, \y) < \CurrentObj}$,
-then as described in~\S\ref{sec:pmap}, we query the symmetry-aware map for~$\Prefix'$;
+then as described in~\S\ref{sec:pmap}, we query the symmetry-aware map for~$\PrefixB$;
 if we insert~$\Prefix'$ into the symmetry-aware map, then we also insert it into the trie and queue.
 %
 Otherwise, %\ie ${b(\Prefix', \x, \y) \ge \CurrentObj}$
 then by our hierarchical lower bound (Theorem~\ref{thm:bound}),
-no extension of~$\Prefix'$ could possibly lead to a rule list with objective
-better than~$\CurrentObj$, thus we do not insert~$\Prefix'$ into the tree or queue.
+no extension of~$\PrefixB$ could possibly lead to a rule list with objective
+better than~$\CurrentObj$, thus we do not insert~$\PrefixB$ into the tree or queue.
 %
 We also leverage our other bounds from~\S\ref{sec:framework}
 to aggressively prune the search space; we highlight each of these bounds
-in Algorithm~\ref{alg:bounds}, which summarize CORELS's inner computational loop.
+in Algorithms~\ref{alg:bounds} and~\ref{alg:pmap},
+which summarize the computations and data structure operations performed in CORELS's inner loop.
 %
 When there are no more leaves to explore, \ie the queue is empty, we output the optimal rule list.
 %
-We can also choose to terminate early according to an alternate condition,
+We can optionally terminate early according to some alternate condition,
 \eg when the size of the prefix tree exceeds some threshold.
 
 \subsection{Garbage collection}
@@ -287,17 +305,17 @@ deleting any childless nodes.
 This garbage collection allows us to constrain the trie's memory consumption, though in our
 experiments we observe the minimum objective to decrease only a small number of times.
 
-In our implementation, we cannot immediately garbage collect trie elements that are currently in the queue.
+In our implementation, we cannot immediately delete prefix tree leaves
+because each corresponds to a queue element that points to it.
 %
-The STL C++ priority queue is a wrapper container that prevents access to the underlying data structure.
+The C++ STL priority queue is a wrapper container that prevents access to the
+underlying data structure, and thus we cannot access elements in the middle of the queue,
+even if we know the relevant identifying information.
 %
-Therefore we cannot access elements in the middle of the queue,
-even know the relevant identifying information.
+We therefore have no way to update the queue without iterating over every element.
 %
-Thus, we have no way to update the queue without iterating over every element.
-%
-We address this by lazily marking nodes in the prefix tree as deleted (see~\S\ref{sec:trie}),
-without deleting the physical node until it has been removed from the queue.
+We address this by marking prefix tree leaves that we wish to delete (see~\S\ref{sec:trie}),
+without deleting the physical nodes until they have been removed from the queue.
 %
 We define two different queues that we refer to in our experiments~(\S\ref{sec:experiments}):
 the physical queue corresponds to all elements in the C++ queue, and thus all prefix tree leaves,
