--- a/paper/nips_2017.tex
+++ b/paper/nips_2017.tex
@@ -36,7 +36,7 @@
 \newtheorem{example}[theorem]{Example}
 \newtheorem{definition}[theorem]{Definition}
 
-\title{Learning certifiably optimal rule lists for categorical data}
+\title{Certifiably optimal rule lists for categorical data}
 
 \author{
   Elaine~Angelino\\
