small grammar correction

--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -289,10 +289,10 @@ by~one.
 
 Our objective has structure amenable to global optimization via a branch-and-bound framework.
 %
-In particular, we make a series of important observations that each translates into
+In particular, we make a series of important observations, each of which translates into
 a useful bound, and that together interact to eliminate large parts of the search~space.
 %
-We will discuss these in depth throughout the following sections:
+We discuss these in depth throughout the following sections:
 %
 \begin{itemize}
 \item Lower bounds on a prefix also hold for every extension of that prefix.
